Fix UI behind the navbar
The navbar had an absolute position that would take it out
of the flow of the page. This meant that the content would
be behind the navbar. This commit fixes that by making the
navbar a block element and making the home element relative
with a negative marging to compensate.

--- a/bc_frontend/src/common/Nav.css
+++ b/bc_frontend/src/common/Nav.css
@@ -15,7 +15,6 @@ nav {
   transition: top 0.3s; /* Transition effect when sliding down (and up) */
   z-index: 1000000;
   box-shadow: 10px 10px 5px #4a585c7a;
-  position: absolute;
 }
 @media screen and (max-width: 768px) {
   nav {
